tests/build/cases/widget_new/incorrect_arg_type6.stderr
error[E0277]: the trait bound `bool: IntoVar<u32>` is not satisfied
  --> cases/widget_new/incorrect_arg_type6.rs:11:13
   |
11 |        let _ = Wgt! {
   |  ______________^
12 | |/         simple_type = {
13 | ||             simple_a: 42,
14 | ||             simple_b: true,
   | ||____________________- required by a bound introduced by this call
15 | |          }
16 | |      };
   | |______^ the trait `IntoVar<u32>` is not implemented for `bool`
   |
   = help: the following other types implement trait `IntoVar<T>`:
            <implementers-list>
note: required by a bound in `simple_type::simple_b`
  --> cases/widget_new/incorrect_arg_type6.rs:5:84
   |
5  | pub fn simple_type(child: impl UiNode, simple_a: impl IntoVar<u32>, simple_b: impl IntoVar<u32>) -> impl UiNode {
   |                                                                                    ^^^^^^^^^^^^ required by this bound in `simple_type::simple_b`
